# algorithm-comparision

./: comparision.py  comparision1.ipynb  main.py  problem.py  pyproject.toml  utils.py
data/: experiments_recent.db
experiment_result/: Rastrigin_2025-11-13.json  Sphere_2025-11-13.json
experiment_result/gemini_first/: Ackley_D100_2025-11-13.json  Ackley_D25_2025-11-13.json  Ackley_D5_2025-11-13.json  Rastrigin_D100_2025-11-13.json  Rastrigin_D25_2025-11-13.json  Rastrigin_D5_2025-11-13.json  Sphere_D100_2025-11-13.json  Sphere_D25_2025-11-13.json  Sphere_D5_2025-11-13.json
